--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
       <label for="leads">Enter URL:</label>
       <input type="text" name="leads" value="" id="input-el" placeholder="https://www.fsf.org" />
+      <label id="warning-el"></label>
       <button id="input-btn">SAVE INPUT</button>
       <button id="delete-btn">DELETE ALL</button>
     </div>
